data/all_generated_tests/raw_wast_tests/loop_ImproperFunctionCallorReturnHandling_895.wast
;; 6. **Loop with Invalid Function Call Types**:    - Description: Implement a loop with `call` instructions to functions with incompatible types, making sure to mix valid and invalid calls to test type validation within the loop.    - Constraint: Ensure the loop validates function call types correctly and handles type mismatch errors appropriately.    - Relation: Incorrect type checking during calls can lead to improper execution flows within the loop.

(assert_invalid
  (module
    (type $valid_sig (func (param i32) (result i32)))
    (type $invalid_sig (func (param f32) (result i32)))
    (func $valid_func (type $valid_sig) (param i32) (result i32)
      local.get 0)
    (func $invalid_func (type $invalid_sig) (param f32) (result i32)
      f32.const 1.0 i32.trunc_f32_s)
    (func $test_loop
      (local f32)
      (local.set 0 (f32.const 0.0))
      (loop (param f32)
        local.get 0
        (i32.const 1) call $valid_func
        (i32.const 2) call $invalid_func
        drop
      )
    )
  )
  "type mismatch"
)